--- a/src/components/NavBar/Navbar.scss
+++ b/src/components/NavBar/Navbar.scss
@@ -6,9 +6,11 @@
 	z-index: 3;
 	display: flex;
 	justify-content: flex-end;
+	width: 100%;
 	padding-right: 35px;
 	padding-top: 2rem;
 	padding-bottom: 2rem;
+	background: linear-gradient(to bottom, rgba(0, 0, 0, 5), rgba(0, 0, 0, 0));
 	&-box {
 		position: absolute;
 		top: 0;
@@ -34,6 +36,7 @@
 		}
 
 		&.hidden {
+			margin: 0;
 			transform: translateY(
 				-100%
 			); /* Ensure hidden class is correctly applied */
@@ -104,7 +107,9 @@
 @media only screen and (min-width: 960px) {
 	.nav {
 		padding: 2rem 70px;
-
+		position: fixed; /* Make the navbar sticky */
+		top: 0; /* Stick it to the top of the viewport */
+		z-index: 10;
 		&-box {
 			position: relative;
 			height: 0rem;
