--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -4,7 +4,8 @@
 .skills {
 	background-color: $background-color-dark;
 
-	.spacer {
+	.spacer,
+	.spacer_top {
 		display: flex;
 		align-items: center;
 		justify-content: center;
