--- a/src/components/NavBar/Navbar.scss
+++ b/src/components/NavBar/Navbar.scss
@@ -53,7 +53,18 @@
 	}
 	.hamburger {
 		cursor: pointer;
-		position: relative;
+		position: fixed;
+		width: 4.4rem;
+		height: 4.2rem;
+		padding: 1.2rem 1rem 1.1rem;
+		border-radius: 50%;
+		background: radial-gradient(
+			circle,
+			rgba(0, 0, 0, 0.4) 20%,
+			rgba(0, 0, 0, 0) 100%
+		);
+		top: 1rem;
+		right: 1rem;
 		z-index: 4;
 		display: flex;
 		flex-direction: column;
